data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1755.wast
;; 6. **Test Description: Operand Stack Height Variations**    - **Reasoning**: Incorrect stack height when taking a branch due to mismatches in the operand stack manipulation.    - **Constraint Checked**: Correct stack height maintenance upon entering and exiting labels.    - **Inconsistent CFG**: Failing to honor correct stack height results in potential swallowing or duplicating of stack operands.    - **Expected Differential Behavior**: The WASM code causes a generic error whereas wizard_engine catches this with an `EmptyValueStackExpecting` error.

(assert_invalid
  (module (func $type-operand-stack-height
    (block (result i32)
      (i32.const 42)
      (br_if 0 (i32.const 1)) 
      (drop)
    )
    (i32.eqz)
  ))
  "type mismatch"
)